# sfn-profiler

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
proto/: perfetto_trace.proto
src/sfn_profiler/cli/: main.py  sfn2perfetto.py
src/sfn_profiler/clients/: boto.py  sfn.py
src/sfn_profiler/models/: __init__.py
src/sfn_profiler/models/perfetto/: perfetto_trace_pb2.py  perfetto_trace_pb2.pyi
src/sfn_profiler/utils/: __init__.py  cache.py  loops.py  sfn.py
tests/sfn_profiler/models/: test_models.py
tests/sfn_profiler/utils/: test_loops.py  test_sfn.py
